# mysql_orm

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md
include/mysql_orm/: BindArray.hpp  Column.hpp  ColumnConstraints.hpp  ColumnNamesJoiner.hpp  ColumnTags.hpp  Connection.hpp  Database.hpp  Delete.hpp  Exception.hh  GetAll.hpp  Insert.hpp  Limit.hpp  QueryContinuation.hpp  QueryType.hpp  Select.hpp  Set.hpp  Statement.hpp  StatementBinder.hpp  StatementFinalizer.hpp  Table.hpp  TypeTraits.hpp  Update.hpp  Utils.hpp  Where.hpp  WhereConditionDSL.hpp
include/mysql_orm/meta/: AllSame.hpp  AttributePtrDissector.hpp  ColumnAttributeGetter.hpp  FindMapped.hpp  IsOptional.hpp  IsTemplateInstanciation.hpp  LiftOptional.hpp  Map.hpp  Pack.hpp  RemoveOccurences.hpp  TableModelGetter.hpp  TypeValEquals.hpp
tests/: CMakeLists.txt  Record.hh  Utils.hh  failcompile_wrapper.sh  test_Column.cpp  test_ColumnTags.cpp  test_Database.cpp  test_Delete.cpp  test_GetAll.cpp  test_Insert.cpp  test_Limit.cpp  test_Pack.cpp  test_RemoveOccurences.cpp  test_Select.cpp  test_Table.cpp  test_Update.cpp  test_Varchar.cpp  test_Where.cpp
tests/fail/: test_GetAllAttributeNotFound.cpp  test_GetAllAttributesDifferentModels.cpp  test_GetAllNoModel.cpp  test_SelectAttributeNotFound.cpp  test_SelectAttributesDifferentModels.cpp  test_SelectNoModel.cpp
